[package]
name = "voiceassistant"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
rodio = "0.19"
ollama-rs = "0.2"
vosk = "0.3"
anyhow = "1.0"
hound = "3.5"
bytes = "1.0"
tempfile = "3.10"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
rss = "2.0"
feed-rs = "2.3"
notify = "6.1"
